@@ -1,1 +1,2 @@
+26 lvm-devices
 50 lvm
