@@ -1,0 +1,28 @@
+#!/bin/sh
+
+# Avoid warnings from lvm2 tools about open file descriptors
+export LVM_SUPPRESS_FD_WARNINGS=1
+
+# Load modules and scan volume groups if it was not done before
+if [ ! -f /var/cache/partman-lvm/first ]; then
+	# load required kernel modules
+	depmod -a >/dev/null 2>&1
+	modprobe dm-mod >/dev/null 2>&1
+	modprobe lvm-mod >/dev/null 2>&1
+
+	# make sure that lvm is available
+	if ! grep -q "[0-9] device-mapper$" /proc/misc ; then
+		db_input critical partman-lvm/nolvm
+		db_go
+		exit 0
+	fi
+
+	# scan for logical volumes
+	log-output -t partman pvscan
+	log-output -t partman vgscan
+
+	# activate volume groups
+	log-output -t partman-lvm vgchange -a y
+
+	mkdir -p /var/cache/partman-lvm && touch /var/cache/partman-lvm/first
+fi
